Add driver push notification support
